      [ticket:1574]
    
    - The cursor associated with connection pool connections
      (i.e. _CursorFairy) now proxies `__iter__()` to the 
      underlying cursor correctly. [ticket:1632]

    - types now support an "affinity comparison" operation, i.e.
      that an Integer/SmallInteger are "compatible", or 
      a Text/String, PickleType/Binary, etc.  Part of 
      [ticket:1556].
      
- sqlite
    - sqlite dialect properly generates CREATE INDEX for a table
      that is in an alternate schema.  [ticket:1439]
      
- postgresql
    - Added support for reflecting the DOUBLE PRECISION type,
      via a new postgres.PGDoublePrecision object.  
      This is postgresql.DOUBLE_PRECISION in 0.6.
      [ticket:1085]
    
    - Added support for reflecting the INTERVAL YEAR TO MONTH
      and INTERVAL DAY TO SECOND syntaxes of the INTERVAL 
      type.  [ticket:460]
      
    - Corrected the "has_sequence" query to take current schema,
      or explicit sequence-stated schema, into account.
      [ticket:1576]

    - Fixed the behavior of extract() to apply operator
      precedence rules to the "::" operator when applying
      the "timestamp" cast - ensures proper parenthesization.  
      [ticket:1611]

- firebird
    - FBDate now extends Date instead of DateTime. [ticket:1573]
    
- mssql
    - Changed the name of TrustedConnection to 
      Trusted_Connection when constructing pyodbc connect
      arguments [ticket:1561]

- ext 
    - A column can be added to a joined-table declarative 
      superclass after the class has been constructed 
      (i.e. via class-level attribute assignment), and
      the column will be propagated down to 
      subclasses. [ticket:1570]  This is the reverse
      situation as that of [ticket:1523], fixed in 0.5.6.

    - Fixed a slight inaccuracy in the sharding example.
      Comparing equivalence of columns in the ORM is best 
      accomplished using col1.shares_lineage(col2).
      [ticket:1491]
    